Anonymous | Login | 2021-01-24 05:48 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030362 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2018-11-12 13:25 | 2019-02-14 12:00 | ||||
Reporter | ika | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030362: Data Exchange - Writing dimensions with inches produced invalid file. | ||||||||
Description | Writing dimensions with inches produced invalid file with unknown references like this: #12930 = ( LENGTH_MEASURE_WITH_UNIT() MEASURE_REPRESENTATION_ITEM() MEASURE_WITH_UNIT(POSITIVE_LENGTH_MEASURE(35.),$ /* UNKNOWN REF */) REPRESENTATION_ITEM('nominal value') ); | ||||||||
Steps To Reproduce | bugs step bug30362 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs step bug30362 | ||||||||
Attached Files | |||||||||
![]() |
|
(0081055) git (administrator) 2018-11-12 13:38 |
Branch CR30362 has been created by ika. SHA-1: 391c8043a082cb1e18667c646ba55ffb7f9fbe6c Detailed log of new commits: Author: ika Date: Thu Nov 8 15:16:12 2018 +0300 0030362: Data Exchange - Writing dimensions with inches produced invalid file. Writing dimensions into STEP files in inches not produce invalid references between STEP entities. |
(0081060) git (administrator) 2018-11-12 15:51 |
Branch CR30362 has been updated forcibly by ika. SHA-1: bb113c2f811e1a76c320f0491ab222d1524e1da9 |
(0081077) ika (developer) 2018-11-13 15:57 |
Dear GKA, could you please review branch CR30362? The problem was in creation of unit entity in STEP exporter, where only si units was used. Test results: http://occt-tests/CR30362-master-ika-Products/Windows-64-VC14/diff_summary.html [^] http://occt-tests/CR30362-master-ika-Products/Debian80-64/diff_summary.html [^] http://occt-tests/CR30362-master-ika-OCCT/Debian80-64/diff_summary.html [^] http://occt-tests/CR30362-master-ika-OCCT/Windows-64-VC14/diff_summary.html [^] |
(0081086) gka (developer) 2018-11-14 14:35 |
Branch CR30362 was reviewed. |
(0081088) apn (administrator) 2018-11-14 15:20 |
Combination - OCCT branch : CR30362 SHA - bb113c2f811e1a76c320f0491ab222d1524e1da9 Products branch : master SHA - dc9b54ff96bfdd5be36ff17bb512772a70f930db was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences Test case: bugs step bug30362 - OK CPU differences: Debian80-64: OCCT Total CPU difference: 16266.56000000002 / 16213.820000000038 [+0.33%] Products Total CPU difference: 7047.900000000023 / 7037.290000000033 [+0.15%] Windows-64-VC14: OCCT Total CPU difference: 17783.828125 / 17699.171875 [+0.48%] Products Total CPU difference: 8515.1875 / 8523.453125 [-0.10%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0081146) git (administrator) 2018-11-18 11:53 |
Branch CR30362 has been deleted by inv. SHA-1: bb113c2f811e1a76c320f0491ab222d1524e1da9 |
![]() |
|||
occt: master 5290fb10
Timestamp: 2018-11-08 12:16:12 Author: ika Committer: apn [ Details ] [ Diff ] |
0030362: Data Exchange - Writing dimensions with inches produced invalid file. Writing dimensions into STEP files in inches not produce invalid references between STEP entities. |
||
mod - src/STEPCAFControl/STEPCAFControl_Writer.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/step/bug30362 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-11-12 13:25 | ika | New Issue | |
2018-11-12 13:25 | ika | Assigned To | => ika |
2018-11-12 13:38 | git | Note Added: 0081055 | |
2018-11-12 15:51 | git | Note Added: 0081060 | |
2018-11-13 15:57 | ika | Note Added: 0081077 | |
2018-11-13 15:57 | ika | Assigned To | ika => gka |
2018-11-13 15:57 | ika | Status | new => resolved |
2018-11-13 15:57 | ika | Steps to Reproduce Updated | View Revisions |
2018-11-14 14:35 | gka | Note Added: 0081086 | |
2018-11-14 14:35 | gka | Assigned To | gka => bugmaster |
2018-11-14 14:35 | gka | Status | resolved => reviewed |
2018-11-14 15:20 | apn | Test case number | => bugs step bug30362 |
2018-11-14 15:20 | apn | Note Added: 0081088 | |
2018-11-14 15:20 | apn | Status | reviewed => tested |
2018-11-18 03:30 | apn | Changeset attached | => occt master 5290fb10 |
2018-11-18 03:30 | apn | Assigned To | bugmaster => apn |
2018-11-18 03:30 | apn | Status | tested => verified |
2018-11-18 03:30 | apn | Resolution | open => fixed |
2018-11-18 11:53 | git | Note Added: 0081146 | |
2019-02-14 12:00 | bugmaster | Project | Internal => Open CASCADE |
Copyright © 2000 - 2021 MantisBT Team |