0030362: Data Exchange - Writing dimensions with inches produced invalid file.

Writing dimensions into STEP files in inches not produce invalid references between STEP entities.